--- a/index.html
+++ b/index.html
@@ -3,13 +3,29 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>DevJane Portfolio Website</title>
+        <title>Thando's Portfolio Website</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />  
 
 
     </head>
     <body>
+        <header>
+            <div class="logo">
+                <img src="./images/Profile Picture.jpg/." alt="Picture of Thandolwethu Mbokazi smiling">
+            </div>
+            <button class="nav-toggle" aria-label="toggle navigation">
+                <span class="hamburger"></span>
+            </button>
+            <nav class="nav">
+                <ul class="nav_list">
+                    <li class="nav_item"><a href="#" class="nav_link">Home</a></li>
+                    <li class="nav_item"><a href="#" class="nav_link">My Services</a></li>
+                    <li class="nav_item"><a href="#" class="nav_link">About Me</a></li>
+                    <li class="nav_item"><a href="#" class="nav_link">My Work</a></li>
+                </ul>
+            </nav>
+        </header>
         
     </body>
 </html>
