--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <body>
         <header>
             <div class="logo">
-                <img src="./images/Profile Picture.jpg/." alt="Picture of Thandolwethu Mbokazi smiling">
+                <img src="" alt="">   <!--Ask About this logo tomorrow-->
             </div>
             <button class="nav-toggle" aria-label="toggle navigation">
                 <span class="hamburger"></span>
             </button>
-            <nav class="nav">
+            <nav class="nav">     <!--Navigation Section-->
                 <ul class="nav_list">
                     <li class="nav_item"><a href="#" class="nav_link">Home</a></li>
                     <li class="nav_item"><a href="#" class="nav_link">My Services</a></li>
@@ -26,6 +26,14 @@
                 </ul>
             </nav>
         </header>
+        <!--Introduction-->
+        <section claass="intro" id="home">
+            <h1 class="intro_title">
+                Hi, I am <strong>Thandolwethu Mbokazi</strong>
+            </h1>
+            <p class="subheading_intro"> I am a front-end developer</p>
+             <img src="./images/Profile Picture.jpg" alt="Picture of Thandolwethu Mbokazi smiling at camera.">
+        </section>
         
     </body>
 </html>
