--- a/index.html
+++ b/index.html
@@ -34,6 +34,27 @@
             <p class="subheading_intro"> I am a front-end developer</p>
              <img src="./images/Profile Picture.jpg" alt="Picture of Thandolwethu Mbokazi smiling at camera.">
         </section>
+        <!--My services-->
+        <section class="services" id="services">
+            <h2 class="title_services"> What I do</h2>
+            <div class="services_paraagraph">
+                <div class="service_p1">      <!--First service paragraph-->
+                    <h3>HTML 5</h3>
+                    <p></p>
+                </div>
+                <div class="service_p2">      <!--second service paragraph-->
+                    <h3></h3>
+                    <p></p>
+                </div>
+                <div class="service_p3">      <!--third service paragraph-->
+                    <h3></h3>
+                    <p></p>
+                </div>
+                <a href="#work" class="btn">My work</a>
+            </div>
+
+
+        </section>
         
     </body>
 </html>
