--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             </button>
             <nav class="nav">     <!--Navigation Section-->
                 <ul class="nav_list">
-                    <li class="nav_item"><a href="#" class="nav_link">Home</a></li>
-                    <li class="nav_item"><a href="#" class="nav_link">My Services</a></li>
-                    <li class="nav_item"><a href="#" class="nav_link">About Me</a></li>
+                    <li class="nav_item"><a href="#home" class="nav_link">Home</a></li>
+                    <li class="nav_item"><a href="#services" class="nav_link">My Services</a></li>
+                    <li class="nav_item"><a href="#about" class="nav_link">About Me</a></li>
                     <li class="nav_item"><a href="#" class="nav_link">My Work</a></li>
                 </ul>
             </nav>
@@ -50,11 +50,21 @@
                     <h3></h3>
                     <p></p>
                 </div>
-                <a href="#work" class="btn">My work</a>
+                <a href="work" class="btn">My work</a>
             </div>
-
-
         </section>
+        <!--About me-->
+        <h2 class="title_about" id="about">Who I Am</h2>
+        <p class="about_subtitle"></p>
+        <div class="about-me_body">
+            <p></p>
+            <p></p>
+        </div>
+        <img src="./images/profile pic 2.jpg" alt="greyscale image of Thandolwethu smiling at camera">
+
+    
+
+
         
     </body>
 </html>
