Created About me and my work sections in html

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
                     <li class="nav_item"><a href="#home" class="nav_link">Home</a></li>
                     <li class="nav_item"><a href="#services" class="nav_link">My Services</a></li>
                     <li class="nav_item"><a href="#about" class="nav_link">About Me</a></li>
-                    <li class="nav_item"><a href="#" class="nav_link">My Work</a></li>
+                    <li class="nav_item"><a href="#work" class="nav_link">My Work</a></li>
                 </ul>
             </nav>
         </header>
         <!--Introduction-->
         <section claass="intro" id="home">
-            <h1 class="intro_title">
+            <h1 class="title_intro">
                 Hi, I am <strong>Thandolwethu Mbokazi</strong>
             </h1>
             <p class="subheading_intro"> I am a front-end developer</p>
@@ -53,6 +53,7 @@
                 <a href="work" class="btn">My work</a>
             </div>
         </section>
+
         <!--About me-->
         <h2 class="title_about" id="about">Who I Am</h2>
         <p class="about_subtitle"></p>
@@ -62,7 +63,42 @@
         </div>
         <img src="./images/profile pic 2.jpg" alt="greyscale image of Thandolwethu smiling at camera">
 
-    
+        <!--My work--> 
+        <section class="my-work" id="work">
+                <h2 class="title_work">My wwork</h2>
+                <p class="work_subtitle"></p>
+            <div class="portfolio">
+                <a href="" class="portfolio_item-01">    <!--Portfolio item 01-->
+                    <img src=""  alt=""  class="portfolio_img">
+                </a>
+            </div>
+            <div class="portfolio">
+                <a href="" class="portfolio_item-02">    <!--Portfolio item 02-->
+                    <img src=""  alt=""  class="portfolio_img">
+                </a>
+            </div>
+            <div class="portfolio">
+                <a href="" class="portfolio_item-03">    <!--Portfolio item 03-->
+                    <img src=""  alt=""  class="portfolio_img">
+                </a>
+            </div>
+            <div class="portfolio">
+                <a href="" class="portfolio_item-04">    <!--Portfolio item 04-->
+                    <img src=""  alt=""  class="portfolio_img">
+                </a>
+            </div>
+            <div class="portfolio">
+                <a href="" class="portfolio_item-05">    <!--Portfolio item 05-->
+                    <img src=""  alt=""  class="portfolio_img">
+                </a>
+            </div>
+            <div class="portfolio">
+                <a href="" class="portfolio_item-06">    <!--Portfolio item 06-->
+                    <img src=""  alt=""  class="portfolio_img">
+                </a>
+            </div>
+
+        </section>
 
 
         
