Added footer section in HTML

--- a/index.html
+++ b/index.html
@@ -100,7 +100,13 @@
 
         </section>
 
-
+    <!--Footer-->
+        <a href="thandwem045@gmail.com" class="footer_link">thandwem045@gmail.com</a>
+        <ul class="socials">
+            <li class="social_items"><a class="social-link">Github</a></li>
+            <li class="social_items"><a class="social-link">Codepen</a></li>
+            <li class="social_items"><a class="social-link">LinkedIn</a></li>
+        </ul>
         
     </body>
 </html>
