Added links to social section in HTML

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
         <!--My work--> 
         <section class="my-work" id="work">
-                <h2 class="title_work">My wwork</h2>
+                <h2 class="title_work">My work</h2>
                 <p class="work_subtitle"></p>
             <div class="portfolio">
                 <a href="" class="portfolio_item-01">    <!--Portfolio item 01-->
@@ -101,11 +101,11 @@
         </section>
 
     <!--Footer-->
-        <a href="thandwem045@gmail.com" class="footer_link">thandwem045@gmail.com</a>
+        <a href="thandwem045@gmail.com" class="footer_link" target="_blank">thandwem045@gmail.com</a>
         <ul class="socials">
-            <li class="social_items"><a class="social-link">Github</a></li>
-            <li class="social_items"><a class="social-link">Codepen</a></li>
-            <li class="social_items"><a class="social-link">LinkedIn</a></li>
+            <li class="social_items"><a class="social-link" href="https://github.com/Tundoor" target="_blank">Github</a></li>
+            <li class="social_items"><a class="social-link" href="https://codepen.io/Thandolwethu-Mbokazi"  target="_blank">Codepen</a></li>
+            <li class="social_items"><a class="social-link" href="https://www.linkedin.com/in/thandolwethu-mbokazi-9bb309287/" target="_blank">LinkedIn</a></li>
         </ul>
         
     </body>
