Added infomation on my services

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Thando's Portfolio Website</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />  
+        <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
 
     </head>
@@ -40,15 +41,20 @@
             <div class="services_paraagraph">
                 <div class="service_p1">      <!--First service paragraph-->
                     <h3>HTML 5</h3>
-                    <p></p>
+                    <p>I am well versed in HTML and am able to create websites using the language. I also have an understanding of
+                        HTML semantics and Version Control systems such as Git and Github. I also have a basic understaning of HTTP and HTTP methods,
+                        responses and requests. 
+                    </p>
+                        
                 </div>
                 <div class="service_p2">      <!--second service paragraph-->
-                    <h3></h3>
-                    <p></p>
+                    <h3>CSS</h3>
+                    <p>I have an understanding of CSS concepts such as: Box-model, Styling, animations and transformations. </p>
                 </div>
                 <div class="service_p3">      <!--third service paragraph-->
-                    <h3></h3>
-                    <p></p>
+                    <h3>CSS Layout</h3>
+                    <p> Am able to use CSS layouts such as Grid and flexbox. I am able to use grid rows and grid columns and understand
+                     how it works. </p>
                 </div>
                 <a href="work" class="btn">My work</a>
             </div>
