--- a/index.html
+++ b/index.html
@@ -67,11 +67,12 @@
         <h2 class="section_title title_about" id="about">Who I Am</h2>
         <p class="section_subtitle about_subtitle">Aspiring front-end developer</p>
         <div class="about-me_body">
-            <p>Iam a 19 year old girl who lives out in sunny Durban. I am an aspiring front-end devveloper and am currently working towards that goal,
+            <p>I am a 19 year old girl who lives out in sunny Durban. I am an aspiring front-end devveloper and am currently working towards that goal,
                 with the help of CodeSpace Academy.
             </p>
             <p>I decided to learn software developing after being introduced to coding in my last year of highschool at a careers expo. Ever since then
-                I have been passionate about programming and knew that this was a field I would enjoy working in.
+                I have been passionate about programming and knew that this was a field I would enjoy working in. Before thiss expo I barely had an idea of what
+                exactly programmers do and am very proud of my progress. 
             </p>
         </div>
         <img src="./images/profile pic 2.jpg" alt="greyscale image of Thandolwethu smiling at camera">
@@ -81,35 +82,25 @@
                 <h2 class="section_title title_work">My work</h2>
                 <p class="section_subtitle work_subtitle"></p>
             <div class="portfolio">
-                <a href="./images/portfolio-01.png" class="portfolio_item-01">    <!--Portfolio item 01-->
-                    <img src=""  alt=""  class="portfolio_img">
+                <a href="https://github.com/Tundoor/Module_2R_CS20240188_WFO2407_C_Thandolwethu-Mbokazi_SDF02_R" class="portfolio_item-01">    <!--Portfolio item 01-->
+                    <img src="./images/portfolio-01.png"  alt=""  class="portfolio_img">
                 </a>
-            </div>
             <div class="portfolio">
-                <a href="" class="portfolio_item-02">    <!--Portfolio item 02-->
-                    <img src="./images/portfolio-02.jpg"  alt=""  class="portfolio_img">
-                </a>
-            </div>
-            <div class="portfolio">
-                <a href="" class="portfolio_item-03">    <!--Portfolio item 03-->
+                <a href="https://github.com/Tundoor/Module_3R_CS20240188_WFO2407_C_Thandolwethu-Mbokazi_SDF03_R" class="portfolio_item-03">    <!--Portfolio item 02-->
                     <img src="./images/portfolio-03.png"  alt=""  class="portfolio_img">
                 </a>
             </div>
             <div class="portfolio">
-                <a href="" class="portfolio_item-04">    <!--Portfolio item 04-->
-                    <img src="./images/portfolio-04.jpg"  alt=""  class="portfolio_img">
-                </a>
-            </div>
-            <div class="portfolio">
-                <a href="" class="portfolio_item-05">    <!--Portfolio item 05-->
+                <a href="https://github.com/Tundoor/Module_6R_CS20240188__WFO2407_C_Thandolwethu-Mbokazi_SDF05R" class="portfolio_item-05">    <!--Portfolio item 03-->
                     <img src="./images/portfolio-05.png"  alt=""  class="portfolio_img">
                 </a>
             </div>
             <div class="portfolio">
-                <a href="" class="portfolio_item-06">    <!--Portfolio item 06-->
-                    <img src="./images/portfolio-06.jpg"  alt=""  class="portfolio_img">
+                <a href="https://github.com/Tundoor/Tundoor-Module_4R_CS20240188_WFO2407_C_Thandolwethu-Mbokazi_SDFO4_R" class="portfolio_item-05">    <!--Portfolio item 04-->
+                    <img src="./images/portfolio-07.png"  alt=""  class="portfolio_img">
                 </a>
             </div>
+        
 
         </section>
 
