--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
             </nav>
         </header>
         <!--Introduction-->
-        <section claass="intro" id="home">
+        <section class="intro" id="home">
             <h1 class="section_title title_intro">
                 Hi, I am <strong>Thandolwethu Mbokazi</strong>
             </h1>
-            <p class="section_subtitle intro_subtitle"> I am a front-end developer</p>
-             <img src="./images/Profile Picture.jpg" alt="Picture of Thandolwethu Mbokazi smiling at camera.">
+            <p class="section_subtitle intro_subtitle"> Front-end developer</p>
+             <img src="./images/Profile Picture.jpg" alt="Picture of Thandolwethu Mbokazi smiling at camera." class="intro_img">
         </section>
         
         <!--My services-->
@@ -64,9 +64,10 @@
         
 
         <!--About me-->
-        <h2 class="section_title title_about" id="about">Who I Am</h2>
-        <p class="section_subtitle about_subtitle">Aspiring front-end developer</p>
-        <div class="about-me_body">
+        <section>
+            <h2 class="section_title title_about" id="about">Who I Am</h2>
+            <p class="section_subtitle about_subtitle">Aspiring front-end developer</p>
+            <div class="about-me_body">
             <p>I am a 19 year old girl who lives out in sunny Durban. I am an aspiring front-end devveloper and am currently working towards that goal,
                 with the help of CodeSpace Academy.
             </p>
@@ -76,6 +77,7 @@
             </p>
         </div>
         <img src="./images/profile pic 2.jpg" alt="greyscale image of Thandolwethu smiling at camera">
+        </section>
 
         <!--My work--> 
         <section class="my-work" id="work">
