Styled about me section

--- a/index.html
+++ b/index.html
@@ -40,18 +40,18 @@
         <section class="services" id="services">
             <h2 class="section_title title_services"> What I do</h2>
             <div class="services_paragraph">
-                <div class="service_p1">      <!--First service paragraph-->
+                <div class="service">      <!--First service paragraph-->
                     <h3>HTML 5</h3>
                     <p>I am well versed in HTML and am able to create websites using the language. I also have an understanding of
                         HTML semantics and Version Control systems such as Git and Github. I also have a basic understaning of HTTP and HTTP methods,
                         responses and requests. 
                     </p>
                 </div>
-                <div class="service_p2">      <!--second service paragraph-->
+                <div class="service">      <!--second service paragraph-->
                     <h3>CSS</h3>
                     <p>I have an understanding of CSS concepts such as: Box-model, Styling, animations and transformations. </p>
                 </div>
-                <div class="service_p3">      <!--third service paragraph-->
+                <div class="service">      <!--third service paragraph-->
                     <h3>CSS Layout</h3>
                     <p> Am able to use CSS layouts such as Grid and flexbox. I am able to use grid rows and grid columns and understand
                      how it works. </p>
@@ -64,19 +64,19 @@
         
 
         <!--About me-->
-        <section>
+        <section class="about-me">
             <h2 class="section_title title_about" id="about">Who I Am</h2>
             <p class="section_subtitle about_subtitle">Aspiring front-end developer</p>
             <div class="about-me_body">
             <p>I am a 19 year old girl who lives out in sunny Durban. I am an aspiring front-end devveloper and am currently working towards that goal,
-                with the help of CodeSpace Academy.
+                with the help of CodeSpace Academy. I have many hobbies which I enjoy such as baking, gaming and one of my latest one's coding.
             </p>
             <p>I decided to learn software developing after being introduced to coding in my last year of highschool at a careers expo. Ever since then
                 I have been passionate about programming and knew that this was a field I would enjoy working in. Before thiss expo I barely had an idea of what
                 exactly programmers do and am very proud of my progress. 
             </p>
         </div>
-        <img src="./images/profile pic 2.jpg" alt="greyscale image of Thandolwethu smiling at camera">
+        <img src="./images/profile pic 2.jpg" alt="greyscale image of Thandolwethu smiling at camera" class="about-me_img">
         </section>
 
         <!--My work--> 
