Added social media icons

--- a/index.html
+++ b/index.html
@@ -84,22 +84,17 @@
                 <h2 class="section_title title_work">My work</h2>
                 <p class="section_subtitle work_subtitle"></p>
             <div class="portfolio">
-                <a href="https://github.com/Tundoor/Module_2R_CS20240188_WFO2407_C_Thandolwethu-Mbokazi_SDF02_R" class="portfolio_item-01">    <!--Portfolio item 01-->
+                <a href="https://github.com/Tundoor/Module_2R_CS20240188_WFO2407_C_Thandolwethu-Mbokazi_SDF02_R" class="portfolio_item">    <!--Portfolio item 01-->
                     <img src="./images/portfolio-01.png"  alt=""  class="portfolio_img">
                 </a>
             <div class="portfolio">
-                <a href="https://github.com/Tundoor/Module_3R_CS20240188_WFO2407_C_Thandolwethu-Mbokazi_SDF03_R" class="portfolio_item-03">    <!--Portfolio item 02-->
-                    <img src="./images/portfolio-03.png"  alt=""  class="portfolio_img">
+                <a href="https://github.com/Tundoor/Module_3R_CS20240188_WFO2407_C_Thandolwethu-Mbokazi_SDF03_R" class="portfolio_item">    <!--Portfolio item 02-->
+                    <img src="./images/portfolio-03.png"  alt=""  class="portfolio_img img02">
                 </a>
             </div>
             <div class="portfolio">
-                <a href="https://github.com/Tundoor/Module_6R_CS20240188__WFO2407_C_Thandolwethu-Mbokazi_SDF05R" class="portfolio_item-05">    <!--Portfolio item 03-->
+                <a href="https://github.com/Tundoor/Module_6R_CS20240188__WFO2407_C_Thandolwethu-Mbokazi_SDF05R" class="portfolio_item">    <!--Portfolio item 03-->
                     <img src="./images/portfolio-05.png"  alt=""  class="portfolio_img">
-                </a>
-            </div>
-            <div class="portfolio">
-                <a href="https://github.com/Tundoor/Tundoor-Module_4R_CS20240188_WFO2407_C_Thandolwethu-Mbokazi_SDFO4_R" class="portfolio_item-05">    <!--Portfolio item 04-->
-                    <img src="./images/portfolio-07.png"  alt=""  class="portfolio_img">
                 </a>
             </div>
         
@@ -109,9 +104,8 @@
     <!--Footer-->
         <a href="thandwem045@gmail.com" class="footer_link" target="_blank">thandwem045@gmail.com</a>
         <ul class="socials">
-            <li class="social_items"><a class="social-link" href="https://github.com/Tundoor" target="_blank">Github</a></li>
-            <li class="social_items"><a class="social-link" href="https://codepen.io/Thandolwethu-Mbokazi"  target="_blank">Codepen</a></li>
-            <li class="social_items"><a class="social-link" href="https://www.linkedin.com/in/thandolwethu-mbokazi-9bb309287/" target="_blank">LinkedIn</a></li>
+            <li class="social_items"><a class="social-link" href="https://github.com/Tundoor" target="_blank"><i class="fab fa-github"></i></a></li>
+            <li class="social_items"><a class="social-link" href="https://codepen.io/Thandolwethu-Mbokazi"  target="_blank"><i class="fab fa-codepen"></i></a></li>
         </ul>
         
     </body>
