Styled footer section

--- a/index.html
+++ b/index.html
@@ -102,11 +102,16 @@
         </section>
 
     <!--Footer-->
+    <footer class="footer">
         <a href="thandwem045@gmail.com" class="footer_link" target="_blank">thandwem045@gmail.com</a>
         <ul class="socials">
-            <li class="social_items"><a class="social-link" href="https://github.com/Tundoor" target="_blank"><i class="fab fa-github"></i></a></li>
-            <li class="social_items"><a class="social-link" href="https://codepen.io/Thandolwethu-Mbokazi"  target="_blank"><i class="fab fa-codepen"></i></a></li>
+            <li class="social_items">
+                <a class="social-link" href="https://github.com/Tundoor" target="_blank">
+                    <i class="fab fa-github"></i></a></li>
+            <li class="social_items">
+                <a class="social-link" href="https://codepen.io/Thandolwethu-Mbokazi"  target="_blank">
+                    <i class="fab fa-codepen"></i></a></li>
         </ul>
-        
+    </footer> 
     </body>
 </html>
