Added toggle effect for nav bar and debugged css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <header class="header">
             <div class="logo">
-                <img src="" alt="">   <!--Ask About this logo tomorrow-->
+                <img src="./images/Thando.png" alt="Logo that reads">   <!--Ask About this logo tomorrow-->
             </div>
             <button class="nav-toggle" aria-label="toggle navigation">
                 <span class="hamburger"></span>
@@ -120,5 +120,7 @@
                     <i class="fab fa-codepen"></i></a></li>
         </ul>
     </footer> 
+
+    <script src="index.js"></script>
     </body>
 </html>
