--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />  
         <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
-
+        <!--Favicons-->
+        <link rel="apple-touch-icon" sizes="180x180" href="./images/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
     </head>
     <body>
         <header class="header">
             <div class="logo">
-                <img src="./images/Thando.png" alt="Logo that reads">   <!--Ask About this logo tomorrow-->
+                <img src="./images/Thando.png" alt="Logo that reads">   <!--Added logo-->
             </div>
             <button class="nav-toggle" aria-label="toggle navigation">
                 <span class="hamburger"></span>
@@ -125,7 +129,8 @@
         </ul>
     </footer> 
 
-    <script src="index.js"></script>
+    
     </body>
+    <script src="index.js"></script>
     
 </html>
